--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.8",
