--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/third-parties": "^14.2.11",
     "@phosphor-icons/react": "^2.1.7",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
