--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/third-parties": "^14.2.11",
     "@phosphor-icons/react": "^2.1.7",
+    "@types/pg": "^8.11.10",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
     "next": "^14.2.13",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
